route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: f1argocd
  namespace: nginx
spec:
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
